Fix blue flash on mobile clicks

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ body {
   font-family: 'Montserrat';
   user-select: none;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 a {
   text-decoration: none;
